# EGL2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Logger.cpp  Logger.h  MountedBuild.cpp  MountedBuild.h  ProjFS.cpp  ProjFS.h  README.md  Stats.cpp  Stats.h  cert.pfx  cert.pwd  filetree.h  main.cpp  passthrough.c  resources.h  resources.rc  winfspcheck.cpp  winfspcheck.h
checks/: oodle_handler.cpp  oodle_handler.h  symlink_workaround.cpp  symlink_workaround.h  winfspcheck.cpp  winfspcheck.h  wintoast_handler.h
cmd/: cmdmain.cpp
containers/: cancel_flag.h  file_sha.h  iterable_queue.h  semaphore.h
filesystem/: dirtree.h  egfs.cpp  egfs.h  memfs.cpp  memfs.h
gui/: GameUpdateChecker.cpp  GameUpdateChecker.h  Localization.cpp  Localization.h  UpdateChecker.cpp  UpdateChecker.h  cApp.cpp  cApp.h  cAuth.cpp  cAuth.h  cMain.cpp  cMain.h  cProgress.cpp  cProgress.h  cSetup.cpp  cSetup.h  cSplash.cpp  cSplash.h  cStorage.cpp  cStorage.h  guimain.cpp  localedefs.h  resources.rc  settings.cpp  settings.h  taskbar.h  updateChecker.h  versioninfo.h  wxHelpButton.cpp  wxHelpButton.h  wxLabelSlider.cpp  wxLabelSlider.h  wxModalWindow.cpp  wxModalWindow.h
help/: MAIN_BTN_PLAY.htm  MAIN_BTN_SETTINGS.htm  MAIN_BTN_STORAGE.htm  MAIN_BTN_VERIFY.htm  SETUP_ADVANCED_BUFCT.htm  SETUP_ADVANCED_CMDARGS.htm  SETUP_ADVANCED_THDCT.htm  SETUP_GENERAL_COMPLEVEL.htm  SETUP_GENERAL_COMPMETHOD.htm  SETUP_GENERAL_INSTFOLDER.htm  SETUP_GENERAL_UPDATEINT.htm  egl2.hhp  help.chm  main.css  map.htm
libraries/curlion/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  curlion.h  error.h  http_connection.cpp  http_connection.h  http_form.cpp  http_form.h  log.h  socket_factory.h  socket_watcher.h  timer.h
libraries/libdeflate/: libdeflatestatic.lib
libraries/oodle/: oo2core_8_win64.lib  oodle2.h
libraries/wintoast/: wintoastlib.cpp  wintoastlib.h
locales/: AR.json  DE.json  EN.json  ES.json  FI.json  FR.json  IT.json  JA.json  PL.json  PT_BR.json  RU.json  TR.json
localetool/: main.cpp
localetool/locales/: ar.json  de.json  de.txt  en.json  en.txt  es.json  es.txt  fi.json  fr.json  fr.txt  it.json  ja.json  pl.json  pt_br.json  ru.json  tr.json
memfs/: main.cpp  memfs.cpp  memfs.h
storage/: EGSProvider.cpp  EGSProvider.h  compression.cpp  compression.h  sha.h  storage.cpp  storage.h
web/: http.h  httplib.cc  httplib.h  manifest.cc  manifest.cpp  manifest.h  url.hh
web/http/: Client.cpp  Client.h
web/manifest/: auth.cpp  auth.h  chunk.cpp  chunk.h  chunk_part.h  feature_level.h  file.cpp  file.h  manifest.cpp  manifest.h
web/personal/: DeviceCodeAuth.cpp  DeviceCodeAuth.h  PersonalAuth.cpp  PersonalAuth.h
